--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  michaeldymock25
-x_username:  mdymock25
+twitter_username:  mdymock25
 
 # Build settings
 markdown: kramdown
