--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,8 @@ twitter_username:  mdymock25
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
 exclude:
-  - code
   - Gemfile
   - Gemfile.lock
