--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Michael Dymock
+title: Contact
 email: michael.dymock@thekids.org.au
 description: > # this means to ignore newlines until "baseurl:"
   Biostatistician at The Kids Research Institute Australia and
