--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Contact
+title: Michael Dymock's Webpage
 email: michael.dymock@thekids.org.au
 description: > # this means to ignore newlines until "baseurl:"
   Biostatistician at The Kids Research Institute Australia and
